--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,8 @@ torch==1.8.1+cpu
 torchvision==0.9.1+cpu
 torchaudio==0.8.1
 --find-links https://download.pytorch.org/whl/torch_stable.html
-fastai
+fastai==2.3.1
+fastcore==1.3.20
+Pillow==8.2.0
 python-multipart
 
